Add eggbake image and update html

--- a/recipes/eggbake.html
+++ b/recipes/eggbake.html
@@ -7,5 +7,16 @@
   </head>
   <body>
     <h1>Egg Bake</h1>
+    <img src="../images/eggbake.jpg" alt="An image of an egg casserole" />
+    <h3>Description</h3>
+    <p>
+      Tasty egg casserole that husband approves! I frequently make this dish
+      because it's so easy to make. This recipe can be easily doubled or
+      tripled, but you may have to cook it longer.
+    </p>
+    <p>
+      This egg casserole recipe is quick, easy, and full of flavor. It's the
+      perfect, low-maintenance breakfast to serve a hungry crowd.
+    </p>
   </body>
 </html>
