Add ingredient list

--- a/recipes/eggbake.html
+++ b/recipes/eggbake.html
@@ -18,5 +18,17 @@
       This egg casserole recipe is quick, easy, and full of flavor. It's the
       perfect, low-maintenance breakfast to serve a hungry crowd.
     </p>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>6 eggs, whisked</li>
+      <li>1 cup shredded Cheddar cheese</li>
+      <li>6 slices bacon, diced</li>
+      <li>2 slices bread, cubed</li>
+      <li>⅓ red bell pepper, diced</li>
+      <li>2 green onions, chopped</li>
+      <li>3 tablespoons milk</li>
+      <li>½ teaspoon minced garlic, or to taste (Optional)</li>
+      <li>salt and ground black pepper to taste</li>
+    </ul>
   </body>
 </html>
