--- a/recipes/eggbake.html
+++ b/recipes/eggbake.html
@@ -1,34 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
     <title>Document</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>Egg Bake</h1>
     <img src="../images/eggbake.jpg" alt="An image of an egg casserole" />
     <h3>Description</h3>
     <p>
-      Tasty egg casserole that husband approves! I frequently make this dish
-      because it's so easy to make. This recipe can be easily doubled or
-      tripled, but you may have to cook it longer.
+        Tasty egg casserole that husband approves! I frequently make this dish
+        because it's so easy to make. This recipe can be easily doubled or
+        tripled, but you may have to cook it longer.
     </p>
     <p>
-      This egg casserole recipe is quick, easy, and full of flavor. It's the
-      perfect, low-maintenance breakfast to serve a hungry crowd.
+        This egg casserole recipe is quick, easy, and full of flavor. It's the
+        perfect, low-maintenance breakfast to serve a hungry crowd.
     </p>
     <h3>Ingredients</h3>
     <ul>
-      <li>6 eggs, whisked</li>
-      <li>1 cup shredded Cheddar cheese</li>
-      <li>6 slices bacon, diced</li>
-      <li>2 slices bread, cubed</li>
-      <li>⅓ red bell pepper, diced</li>
-      <li>2 green onions, chopped</li>
-      <li>3 tablespoons milk</li>
-      <li>½ teaspoon minced garlic, or to taste (Optional)</li>
-      <li>salt and ground black pepper to taste</li>
+        <li>6 eggs, whisked</li>
+        <li>1 cup shredded Cheddar cheese</li>
+        <li>6 slices bacon, diced</li>
+        <li>2 slices bread, cubed</li>
+        <li>⅓ red bell pepper, diced</li>
+        <li>2 green onions, chopped</li>
+        <li>3 tablespoons milk</li>
+        <li>½ teaspoon minced garlic, or to taste (Optional)</li>
+        <li>salt and ground black pepper to taste</li>
     </ul>
-  </body>
+    <h3>Steps</h3>
+    <ol>
+        <li>Gather all ingredients.</li>
+        <li>Preheat the oven to 350 degrees F (175 degrees C). Grease a 9x13-inch baking dish.</li>
+        <li>Mix eggs, cheese, bacon, bread, red bell pepper, green onion, milk, garlic, salt, and black pepper together
+            in a bowl
+            until well-combined; pour into the prepared baking dish.
+        </li>
+        <li>Bake in the preheated oven until eggs are set, about 20 to 25 minutes.</li>
+        <li>Enjoy!</li>
+    </ol>
+</body>
+
 </html>
