fine tune steps

--- a/recipes/eggbake.html
+++ b/recipes/eggbake.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Egg Bake</title>
 </head>
 
 <body>
@@ -43,6 +43,8 @@
         <li>Bake in the preheated oven until eggs are set, about 20 to 25 minutes.</li>
         <li>Enjoy!</li>
     </ol>
+    <a href="https://www.allrecipes.com/recipe/241925/super-easy-egg-casserole/" target="_blank"
+        rel="noopener noreferrer">Source</a>
 </body>
 
 </html>
